Deleted backup-files from merge, and X_train_lasso, containing significant features

--- a/41/code.ipynb
+++ b/41/code.ipynb
@@ -542,18 +542,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "50818851",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "19\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.preprocessing import StandardScaler\n",
@@ -573,7 +565,9 @@
     "coefficients = feature_extractor.coef_[0][abs(feature_extractor.coef_[0])>thresh]\n",
     "z = list(zip(significant, coefficients))\n",
     "z.sort(key=lambda x: abs(x[1]), reverse=True)\n",
-    "significantSorted = [p[0] for p in z]"
+    "significantSorted = [p[0] for p in z]\n",
+    "\n",
+    "X_train_lasso = X_train[significant]"
    ]
   },
   {
@@ -600,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 16,
    "id": "26174217",
    "metadata": {},
    "outputs": [
