Added X_test_lasso as well

--- a/41/code.ipynb
+++ b/41/code.ipynb
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "50818851",
    "metadata": {},
    "outputs": [],
@@ -567,7 +567,8 @@
     "z.sort(key=lambda x: abs(x[1]), reverse=True)\n",
     "significantSorted = [p[0] for p in z]\n",
     "\n",
-    "X_train_lasso = X_train[significant]"
+    "X_train_lasso = X_train[significant]\n",
+    "X_test_lasso = X_test[significant]"
    ]
   },
   {
