Removed some features from logreg

--- a/41/code.ipynb
+++ b/41/code.ipynb
@@ -868,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": null,
    "id": "26174217",
    "metadata": {},
    "outputs": [
@@ -1001,16 +1001,16 @@
     "\n",
     "#We try all the features, the best half and quarter, as well as the worst half for fun\n",
     "listsOfFeatures = [\n",
-    "    X_train.columns,\n",
-    "    significantSorted,\n",
-    "    significantSorted[0:7],\n",
-    "    significantSorted[0:len(significantSorted)//2],\n",
+    "    significantSorted[0:len(significantSorted)//16],\n",
+    "    significantSorted[0:len(significantSorted)//8],\n",
     "    significantSorted[0:len(significantSorted)//4],\n",
-    "    significantSorted[len(significantSorted)//2:-1]\n",
+    "    significantSorted[0:len(significantSorted)//2],\n",
+    "    significantSorted,\n",
+    "    X_train.columns,\n",
     "]\n",
     "\n",
     "param_grid = {\n",
-    "    'model__C' : np.logspace(-2, 2, 5),\n",
+    "    'model__C' : np.logspace(-3, 0, 5),\n",
     "    'model__class_weight': [None, 'balanced'],\n",
     "}\n",
     "\n",
@@ -1028,9 +1028,6 @@
     "f1Baseline = f1_score(y_train, baseLinePredictions)\n",
     "print(f\"Baseline f1-score is: {f1Baseline}\")\n",
     "\n",
-    "baseLinePredictionsTest = np.ones_like(y_test)\n",
-    "f1BaselineTest = f1_score(y_test, baseLinePredictionsTest)\n",
-    "print(f\"Baseline f1-score for test is: {f1BaselineTest}\")\n",
     "\n",
     "for i, features in enumerate(listsOfFeatures):\n",
     "    X_train_iter = X_train[features]\n",
@@ -1044,14 +1041,6 @@
     "    logreg_result = unpack_gridsearch(grid)\n",
     "    plot_grid_result(logreg_result, baseline=f1Baseline)\n",
     "\n",
-    "    y_hat = grid.predict(X_test_iter)\n",
-    "\n",
-    "    test_score = f1_score(y_test, y_hat)\n",
-    "    \n",
-    "\n",
-    "    print(f\"Test score for best model with current features is: {test_score}\")\n",
-    "\n",
-    "\n",
     "    #Storing results\n",
     "    results[key] = {\n",
     "        'best_score': grid.best_score_,\n",
@@ -1061,7 +1050,7 @@
     "    \n",
     "\n",
     "for key, res in results.items():\n",
-    "    print(f\"**{key}**: Best Score = {res['best_score']:.4f}, Best C = {res['best_params']['model__C']:.4f}\")\n"
+    "    print(f\"**{key}**: Best Score = {res['best_score']:.4f}, Best C = {res['best_params']['model__C']:.4f}\")"
    ]
   },
   {
