changed RF print out

--- a/41/code.ipynb
+++ b/41/code.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 2,
    "id": "4b22f989",
    "metadata": {},
    "outputs": [],
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 3,
    "id": "532505f7",
    "metadata": {},
    "outputs": [],
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "id": "aed50103",
    "metadata": {},
    "outputs": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "ae258767",
    "metadata": {},
    "outputs": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "id": "a9ca9c4a",
    "metadata": {},
    "outputs": [
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "id": "1fd36e5f",
    "metadata": {},
    "outputs": [
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 8,
    "id": "13904c1f",
    "metadata": {},
    "outputs": [
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "id": "6b97271c",
    "metadata": {},
    "outputs": [],
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 10,
    "id": "953ed0c6",
    "metadata": {},
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "id": "76a0e7cf",
    "metadata": {},
    "outputs": [
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 12,
    "id": "4a92f2f2",
    "metadata": {},
    "outputs": [
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 13,
    "id": "63235928",
    "metadata": {},
    "outputs": [],
@@ -590,7 +590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 14,
    "id": "f2c457a5",
    "metadata": {},
    "outputs": [
@@ -638,7 +638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "id": "8bb5caf3",
    "metadata": {},
    "outputs": [
@@ -677,7 +677,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 16,
    "id": "459378a9",
    "metadata": {},
    "outputs": [
@@ -1066,7 +1066,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 18,
    "id": "89cfe840",
    "metadata": {},
    "outputs": [
@@ -1135,8 +1135,11 @@
       "Best F1 for depth 10 : 0.8085380116959064\n",
       "Best params: {'model__max_features': 10, 'model__n_estimators': 100}\n",
       "\n",
-      "Best model: depth = 10 , n_estimators = 100 , max_features = 10 \n",
-      "F1 score: 0.8085380116959064 \n",
+      "\n",
+      "Training performance (F1): 0.8541178047309522\n",
+      "\n",
+      "Best model: depth = 10 , n_estimators = 100 , max_features = 10\n",
+      "F1 score: 0.8085380116959064\n",
       "important features (>= 0.01):\n",
       " grid                       0.407736\n",
       "year                       0.236904\n",
@@ -1147,6 +1150,14 @@
       "constructorRef_williams    0.036642\n",
       "constructorRef_red_bull    0.014340\n",
       "dtype: float64\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/torsteinfossnes/Documents/Berkeley/MECENG 276/project/f1-dnf-analysis/.venv/lib/python3.10/site-packages/sklearn/utils/validation.py:2742: UserWarning: X has feature names, but RandomForestClassifier was fitted without feature names\n",
+      "  warnings.warn(\n"
      ]
     }
    ],
@@ -1187,21 +1198,23 @@
     "feature_importance = pd.Series(best_rf.feature_importances_, index=X_train.columns).sort_values(ascending=False)\n",
     "important_features_rf = feature_importance[feature_importance >= 0.01]\n",
     "\n",
+    "print(\"\\n\\nTraining performance (F1):\", f1_score(best_rf.predict(X_train), y_train))\n",
     "print(\"\\nBest model: depth =\", best_depth, \n",
     "      \", n_estimators =\", best_params[\"model__n_estimators\"], \n",
-    "      \", max_features =\", best_params[\"model__max_features\"], \n",
-    "      \"\\nF1 score:\", best_score, \n",
-    "      \"\\nimportant features (>= 0.01):\\n\", important_features_rf\n",
-    ")"
+    "      \", max_features =\", best_params[\"model__max_features\"]\n",
+    ")\n",
+    "print(\"F1 score:\", best_score)\n",
+    "print(\"important features (>= 0.01):\\n\", important_features_rf)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 19,
    "id": "29b8b3ec",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# New design matrix defined by feature importance for potensial use in other models\n",
     "X_train_RF = train_data[important_features_rf.index]"
    ]
   },
@@ -2550,7 +2563,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -2564,7 +2577,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.10.8"
   }
  },
  "nbformat": 4,
