Add SVM training on feature selected dataset and comparison with preprocessed

--- a/41/code.ipynb
+++ b/41/code.ipynb
@@ -1209,13 +1209,208 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 80,
    "id": "29b8b3ec",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>grid</th>\n",
+       "      <th>year</th>\n",
+       "      <th>round</th>\n",
+       "      <th>alt</th>\n",
+       "      <th>constructorRef_ferrari</th>\n",
+       "      <th>constructorRef_mclaren</th>\n",
+       "      <th>constructorRef_williams</th>\n",
+       "      <th>constructorRef_red_bull</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>11</td>\n",
+       "      <td>2002</td>\n",
+       "      <td>13</td>\n",
+       "      <td>264</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>23</td>\n",
+       "      <td>1981</td>\n",
+       "      <td>1</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1958</td>\n",
+       "      <td>8</td>\n",
+       "      <td>578</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1988</td>\n",
+       "      <td>12</td>\n",
+       "      <td>162</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>5</td>\n",
+       "      <td>1975</td>\n",
+       "      <td>14</td>\n",
+       "      <td>485</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9994</th>\n",
+       "      <td>15</td>\n",
+       "      <td>1984</td>\n",
+       "      <td>12</td>\n",
+       "      <td>678</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9995</th>\n",
+       "      <td>22</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>18</td>\n",
+       "      <td>785</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9996</th>\n",
+       "      <td>16</td>\n",
+       "      <td>2006</td>\n",
+       "      <td>3</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9998</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1980</td>\n",
+       "      <td>4</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9999</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1976</td>\n",
+       "      <td>14</td>\n",
+       "      <td>332</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>8550 rows × 8 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      grid  year  round  alt  constructorRef_ferrari  constructorRef_mclaren  \\\n",
+       "0       11  2002     13  264                     0.0                     1.0   \n",
+       "1       23  1981      1   12                     0.0                     1.0   \n",
+       "2        0  1958      8  578                     0.0                     0.0   \n",
+       "4        0  1988     12  162                     0.0                     0.0   \n",
+       "6        5  1975     14  485                     0.0                     0.0   \n",
+       "...    ...   ...    ...  ...                     ...                     ...   \n",
+       "9994    15  1984     12  678                     1.0                     0.0   \n",
+       "9995    22  2006     18  785                     0.0                     0.0   \n",
+       "9996    16  2006      3   10                     0.0                     0.0   \n",
+       "9998     0  1980      4   12                     0.0                     0.0   \n",
+       "9999     0  1976     14  332                     0.0                     0.0   \n",
+       "\n",
+       "      constructorRef_williams  constructorRef_red_bull  \n",
+       "0                         0.0                      0.0  \n",
+       "1                         0.0                      0.0  \n",
+       "2                         0.0                      0.0  \n",
+       "4                         0.0                      0.0  \n",
+       "6                         0.0                      0.0  \n",
+       "...                       ...                      ...  \n",
+       "9994                      0.0                      0.0  \n",
+       "9995                      0.0                      1.0  \n",
+       "9996                      0.0                      0.0  \n",
+       "9998                      0.0                      0.0  \n",
+       "9999                      0.0                      0.0  \n",
+       "\n",
+       "[8550 rows x 8 columns]"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# New design matrix defined by feature importance for potensial use in other models\n",
-    "X_train_RF = train_data[important_features_rf.index]"
+    "# New design matrix defined by feature importance for potential use in other models\n",
+    "X_train_RF = train_data[important_features_rf.index]\n",
+    "\n",
+    "X_train_RF"
    ]
   },
   {
@@ -1279,7 +1474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 76,
    "id": "798b97b3",
    "metadata": {},
    "outputs": [
@@ -1318,10 +1513,13 @@
     "    print(f\"Recall   : {recall_score(y_true, y_pred):.4f}\")\n",
     "    print(f\"F1       : {f1_score(y_true, y_pred):.4f}\")\n",
     "\n",
-    "# Load dataset\n",
+    "# Preprocessed dataset\n",
     "df = pd.DataFrame(encoded_data)\n",
     "\n",
-    "# Quick sanity checks\n",
+    "# Feature selected dataset\n",
+    "df_fs = pd.DataFrame(X_train_RF)\n",
+    "\n",
+    "# Quick sanity checks for preprocessed dataset\n",
     "print(\"Dataset shape:\", df.shape)\n",
     "print(\"\\nColumns:\\n\", df.columns.tolist())\n",
     "\n",
@@ -1461,7 +1659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 87,
    "id": "3c2643d0",
    "metadata": {},
    "outputs": [
@@ -1483,7 +1681,7 @@
     "])\n",
     "\n",
     "# Hyperparameter grid\n",
-    "param_grid = {\n",
+    "svm_param_grid = {\n",
     "    \"model__kernel\": [\"linear\", \"rbf\", \"poly\"],\n",
     "    \"model__C\": [0.1, 1, 10],\n",
     "    \"model__gamma\": [\"scale\", 0.1, 0.01],  # gamma used for rbf/poly\n",
@@ -1492,11 +1690,12 @@
     "# Grid search object\n",
     "svm_grid = GridSearchCV(\n",
     "    estimator=svm_pipe,\n",
-    "    param_grid=param_grid,\n",
+    "    param_grid=svm_param_grid,\n",
     "    scoring=\"f1\",\n",
     "    cv=5,\n",
     "    n_jobs=-1,\n",
     "    verbose=0,\n",
+    "    return_train_score=True,\n",
     ")\n",
     "\n",
     "# Fit on training data\n",
@@ -2041,6 +2240,272 @@
     "print(f\"Median |margin|          : {np.median(abs_scores):.4f}\")\n",
     "print(f\"10th percentile |margin| : {np.percentile(abs_scores, 10):.4f}\")\n",
     "print(f\"90th percentile |margin| : {np.percentile(abs_scores, 90):.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "228d6f59",
+   "metadata": {},
+   "source": [
+    "## SVM on Feature-Selected Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "8d48ae0a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feature-selected training size (X, y): (8550, 8) , 8550\n",
+      "Feature-selected test size (X, y): (1450, 8) , 1450\n",
+      "\n",
+      "Checking that targets are not in X columns (feature-selected):\n",
+      "target_finish in X_train_fs? False\n",
+      "target_dnf in X_train_fs? False\n",
+      "=== Baseline SVM (feature-selected) ===\n",
+      "Accuracy : 0.6759\n",
+      "Precision: 0.6555\n",
+      "Recall   : 0.6400\n",
+      "F1       : 0.6477\n",
+      "\n",
+      "=== Feature-selected dataset: best SVM from grid search ===\n",
+      "Best params: {'model__C': 10, 'model__gamma': 'scale', 'model__kernel': 'rbf'}\n",
+      "Best CV F1: 0.8780\n",
+      "=== Best SVM (feature-selected) ===\n",
+      "Accuracy : 0.6752\n",
+      "Precision: 0.6689\n",
+      "Recall   : 0.5985\n",
+      "F1       : 0.6317\n"
+     ]
+    }
+   ],
+   "source": [
+    "cutoff_year = 2015  # same cutoff as for the preprocessed data\n",
+    "\n",
+    "rf_feature_cols = important_features_rf.index.tolist()\n",
+    "\n",
+    "# Feature-selected design matrices, aligned with the original split\n",
+    "X_train_fs = train_data[rf_feature_cols]\n",
+    "X_test_fs  = test_data[rf_feature_cols]\n",
+    "\n",
+    "y_train_fs = train_data[\"target_dnf\"]\n",
+    "y_test_fs  = test_data[\"target_dnf\"]\n",
+    "\n",
+    "print(\"Feature-selected training size (X, y):\", X_train_fs.shape, \",\", len(y_train_fs))\n",
+    "print(\"Feature-selected test size (X, y):\", X_test_fs.shape, \",\", len(y_test_fs))\n",
+    "\n",
+    "print(\"\\nChecking that targets are not in X columns (feature-selected):\")\n",
+    "for col in [\"target_finish\", \"target_dnf\"]:\n",
+    "    print(f\"{col} in X_train_fs? {col in X_train_fs.columns}\")\n",
+    "\n",
+    "# Baseline SVM on feature-selected data for comparison\n",
+    "svm_baseline_fs = Pipeline([\n",
+    "    (\"scaler\", StandardScaler()),\n",
+    "    (\"model\", SVC(random_state=RANDOM_STATE)),\n",
+    "])\n",
+    "svm_baseline_fs.fit(X_train_fs, y_train_fs)\n",
+    "y_pred_baseline_fs = svm_baseline_fs.predict(X_test_fs)\n",
+    "evaluate_model(\"Baseline SVM (feature-selected)\", y_test_fs, y_pred_baseline_fs)\n",
+    "\n",
+    "# Grid search on feature-selected data\n",
+    "svm_pipe_fs = Pipeline([\n",
+    "    (\"scaler\", StandardScaler()),\n",
+    "    (\"model\", SVC(random_state=RANDOM_STATE)),\n",
+    "])\n",
+    "\n",
+    "svm_grid_fs = GridSearchCV(\n",
+    "    estimator=svm_pipe_fs,\n",
+    "    param_grid=svm_param_grid,\n",
+    "    scoring=\"f1\",\n",
+    "    cv=5,\n",
+    "    n_jobs=-1,\n",
+    "    verbose=0,\n",
+    "    return_train_score=True,\n",
+    ")\n",
+    "\n",
+    "svm_grid_fs.fit(X_train_fs, y_train_fs)\n",
+    "\n",
+    "print(\"\\n=== Feature-selected dataset: best SVM from grid search ===\")\n",
+    "print(\"Best params:\", svm_grid_fs.best_params_)\n",
+    "print(f\"Best CV F1: {svm_grid_fs.best_score_:.4f}\")\n",
+    "\n",
+    "best_svm_fs = svm_grid_fs.best_estimator_\n",
+    "y_pred_fs = best_svm_fs.predict(X_test_fs)\n",
+    "evaluate_model(\"Best SVM (feature-selected)\", y_test_fs, y_pred_fs)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3aeb7709",
+   "metadata": {},
+   "source": [
+    "## Training and Validation F1 for Preprocessed and Feature-Selected Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "f9a7b1f8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preprocessed SVM:\n",
+      "  Training F1   = 0.8851\n",
+      "  Validation F1 = 0.8711\n",
+      "\n",
+      "Feature-selected SVM:\n",
+      "  Training F1   = 0.8848\n",
+      "  Validation F1 = 0.8780\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Preprocessed SVM\n",
+    "best_idx_pre = svm_grid.best_index_\n",
+    "train_f1_pre = svm_grid.cv_results_[\"mean_train_score\"][best_idx_pre]\n",
+    "val_f1_pre   = svm_grid.best_score_\n",
+    "\n",
+    "print(\"Preprocessed SVM:\")\n",
+    "print(f\"  Training F1   = {train_f1_pre:.4f}\")\n",
+    "print(f\"  Validation F1 = {val_f1_pre:.4f}\")\n",
+    "\n",
+    "# Feature-selected SVM\n",
+    "best_idx_fs = svm_grid_fs.best_index_\n",
+    "train_f1_fs = svm_grid_fs.cv_results_[\"mean_train_score\"][best_idx_fs]\n",
+    "val_f1_fs   = svm_grid_fs.best_score_\n",
+    "\n",
+    "print(\"\\nFeature-selected SVM:\")\n",
+    "print(f\"  Training F1   = {train_f1_fs:.4f}\")\n",
+    "print(f\"  Validation F1 = {val_f1_fs:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9d737e19",
+   "metadata": {},
+   "source": [
+    "## Best SVM on Preprocessed vs Feature-Selected Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "427d3456",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>dataset</th>\n",
+       "      <th>C</th>\n",
+       "      <th>gamma</th>\n",
+       "      <th>kernel</th>\n",
+       "      <th>test_accuracy</th>\n",
+       "      <th>test_precision</th>\n",
+       "      <th>test_recall</th>\n",
+       "      <th>test_f1</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Preprocessed</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>rbf</td>\n",
+       "      <td>0.631724</td>\n",
+       "      <td>0.585248</td>\n",
+       "      <td>0.717037</td>\n",
+       "      <td>0.644474</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Feature selected</td>\n",
+       "      <td>10</td>\n",
+       "      <td>scale</td>\n",
+       "      <td>rbf</td>\n",
+       "      <td>0.675172</td>\n",
+       "      <td>0.668874</td>\n",
+       "      <td>0.598519</td>\n",
+       "      <td>0.631744</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            dataset   C  gamma kernel  test_accuracy  test_precision  \\\n",
+       "0      Preprocessed  10   0.01    rbf       0.631724        0.585248   \n",
+       "1  Feature selected  10  scale    rbf       0.675172        0.668874   \n",
+       "\n",
+       "   test_recall   test_f1  \n",
+       "0     0.717037  0.644474  \n",
+       "1     0.598519  0.631744  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Best model on preprocessed data (from original grid search)\n",
+    "best_params_pre = svm_grid.best_params_\n",
+    "best_svm_pre = svm_grid.best_estimator_\n",
+    "y_pred_pre = best_svm_pre.predict(X_test)\n",
+    "\n",
+    "pre_metrics = {\n",
+    "    \"dataset\": \"Preprocessed\",\n",
+    "    \"C\":      best_params_pre[\"model__C\"],\n",
+    "    \"gamma\":  best_params_pre[\"model__gamma\"],\n",
+    "    \"kernel\": best_params_pre[\"model__kernel\"],\n",
+    "    \"test_accuracy\":  accuracy_score(y_test, y_pred_pre),\n",
+    "    \"test_precision\": precision_score(y_test, y_pred_pre, zero_division=0),\n",
+    "    \"test_recall\":    recall_score(y_test, y_pred_pre, zero_division=0),\n",
+    "    \"test_f1\":        f1_score(y_test, y_pred_pre, zero_division=0),\n",
+    "}\n",
+    "\n",
+    "# Best model on feature-selected data\n",
+    "best_params_fs = svm_grid_fs.best_params_\n",
+    "y_pred_fs = best_svm_fs.predict(X_test_fs)\n",
+    "\n",
+    "fs_metrics = {\n",
+    "    \"dataset\": \"Feature selected\",\n",
+    "    \"C\":      best_params_fs[\"model__C\"],\n",
+    "    \"gamma\":  best_params_fs[\"model__gamma\"],\n",
+    "    \"kernel\": best_params_fs[\"model__kernel\"],\n",
+    "    \"test_accuracy\":  accuracy_score(y_test_fs, y_pred_fs),\n",
+    "    \"test_precision\": precision_score(y_test_fs, y_pred_fs, zero_division=0),\n",
+    "    \"test_recall\":    recall_score(y_test_fs, y_pred_fs, zero_division=0),\n",
+    "    \"test_f1\":        f1_score(y_test_fs, y_pred_fs, zero_division=0),\n",
+    "}\n",
+    "\n",
+    "svm_dataset_comparison = pd.DataFrame([pre_metrics, fs_metrics])\n",
+    "display(svm_dataset_comparison)"
    ]
   },
   {
