--- a/41/code.ipynb
+++ b/41/code.ipynb
@@ -2953,7 +2953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 329,
    "id": "0354bae6",
    "metadata": {},
    "outputs": [
@@ -2961,27 +2961,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1m46/46\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step\n",
-      "F1-score: 0.5876\n",
-      "\n",
-      "Classification report:\n",
-      "\n",
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.65      0.81      0.72       775\n",
-      "           1       0.70      0.51      0.59       675\n",
-      "\n",
-      "    accuracy                           0.67      1450\n",
-      "   macro avg       0.68      0.66      0.66      1450\n",
-      "weighted avg       0.67      0.67      0.66      1450\n",
-      "\n"
+      "\u001b[1m46/46\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 1ms/step \n",
+      "F1-score: 0.6467\n"
      ]
     }
    ],
    "source": [
     "#Scores \n",
     "\n",
-    "from sklearn.metrics import f1_score, classification_report\n",
     "\n",
     "#Predictions\n",
     "y_prob = best_model.predict(X_test)\n",
@@ -2991,9 +2978,7 @@
     "f1 = f1_score(y_test, y_pred)\n",
     "print(f\"F1-score: {f1:.4f}\")\n",
     "\n",
-    "#Classification report\n",
-    "print(\"\\nClassification report:\\n\")\n",
-    "print(classification_report(y_test, y_pred))\n"
+    "\n"
    ]
   }
  ],
