written out f1, recall, precision of RF at the end

--- a/41/code.ipynb
+++ b/41/code.ipynb
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "4b22f989",
    "metadata": {},
    "outputs": [],
@@ -2953,6 +2953,37 @@
    "metadata": {},
    "source": [
     "The loss curves show a consistent downward trend for both the training and validation sets, indicating that the model continues to learn throughout the training process. Although the validation loss fluctuates slightly from epoch to epoch, this is expected given the relatively small validation set and the fixed optimizer settings required by the project. Overall, the training and validation loss follow similar trajectories, suggesting that the model generalizes reasonably well without severe overfitting."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a44bddf",
+   "metadata": {},
+   "source": [
+    "# Final testing og held-out data #"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "b42199d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F1: 0.7040328092959672\n",
+      "Recall: 0.6535532994923858\n",
+      "Precision: 0.762962962962963\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_test_hat = best_rf.predict(X_test)\n",
+    "print(\"F1:\",f1_score(y_test_hat, y_test))\n",
+    "print(\"Recall:\", recall_score(y_test_hat, y_test))\n",
+    "print(\"Precision:\", precision_score(y_test_hat, y_test))"
    ]
   }
  ],
