endra utskrift og innholdsfortegnelse

--- a/41/code.ipynb
+++ b/41/code.ipynb
@@ -42,6 +42,7 @@
     "- Support Vector Machine\n",
     "- Neural Network\n",
     "\n",
+    "**Best Model evaluated with Test data**\n",
     "\n",
     "\n"
    ]
@@ -2952,7 +2953,7 @@
    "id": "2a44bddf",
    "metadata": {},
    "source": [
-    "# Final testing og held-out data #"
+    "# Best Model evaluated with Test data #"
    ]
   },
   {
